--- a/www/partials/chat.html
+++ b/www/partials/chat.html
@@ -1,4 +1,4 @@
-<ons-page ng-controller="ChatControl">
+<ons-page modifier="full_bg" ng-controller="ChatControl">
   <ons-toolbar style="padding-top:10px;">
         <div class="left">
             <ons-back-button>Back</ons-back-button>
