--- a/www/partials/login.html
+++ b/www/partials/login.html
@@ -1,4 +1,4 @@
-<ons-page ng-controller="LoginControl">
+<ons-page modifier="full_bg" ng-controller="LoginControl">
   <ons-toolbar>
     <div class="center">Log In</div>
   </ons-toolbar>
@@ -25,7 +25,7 @@ style="display: block;
     <br><br>
     <ons-button var="loginButton" modifier="large" class="login-button" ng-click="LogIn();">Log In</ons-button>
     <br><br>
-    <ons-button ng-click="app.navi.replacePage('partials/register.html')" modifier="quiet" class="">Don't have an account?</ons-button>
+    <ons-button style="color:#c8aa6e;" ng-click="app.navi.replacePage('partials/register.html')" modifier="quiet" class="">Don't have an account?</ons-button>
     <!--<ons-button modifier="quiet" class="forgot-password">Forgot password?</ons-button>-->
   </div>
 
