--- a/www/partials/register.html
+++ b/www/partials/register.html
@@ -1,4 +1,4 @@
-<ons-page ng-controller="RegisterControl">
+<ons-page modifier="full_bg" ng-controller="RegisterControl">
   <ons-toolbar>
     <div class="center">Register</div>
   </ons-toolbar>
