--- a/www/partials/edit_premium.html
+++ b/www/partials/edit_premium.html
@@ -1,4 +1,4 @@
-<ons-page ng-controller="EditProfileControl">
+<ons-page modifier="full_bg" ng-controller="EditProfileControl">
 <ons-toolbar>
         <div class="left"><ons-back-button>Back</ons-back-button></div>
         <div class="center">Edit Profile</div>
