--- a/www/partials/matches.html
+++ b/www/partials/matches.html
@@ -9,7 +9,7 @@
 
 
 
-<ons-page >
+<ons-page modifier="full_bg" >
 <ons-modal var="modal">
   <ons-icon icon="ion-load-c" spin="true"></ons-icon>
   <br>
